@@ -268,6 +268,7 @@ key esc [ 2 8 ~   findAgain "up"
 key esc O 2 R;findAgain "up"
 key ctrl+r;searchAndReplace
 key ctrl+alt+u;clearMatches
+key alt+c;close_code
 
 key f2            shell
 key esc O Q       shell
@@ -396,6 +397,8 @@ lang.xml.tokens.template.open \[@--
 lang.xml.tokens.template.close --@\]
 lang.xml.tokens.template.format brown
 lang.xml.tokens.template.change_to perl
+lang.xml.closers.tag.regexp <(.*?)>$
+lang.xml.closers.tag.closer { |m| "</" + m[ 1 ] + ">" }
 lang.xml_tag.format.default white bold
 lang.xml_tag.format.selection inverse
 lang.xml_tag.format.found yellow inverse
@@ -711,6 +714,8 @@ lang.java.tokens.symbols.format white
 lang.java.tokens.long_comments.open \/\*
 lang.java.tokens.long_comments.close \*\/
 lang.java.tokens.long_comments.format 8 bold
+lang.java.tokens.regular_expressions (\/.+?[^\\]\/)
+lang.java.tokens.regular_expressions.format red bold
 lang.java.indent.size 4
 lang.java.indent.auto true
 lang.java.indent.roundup false
